try/catch added. swagger.json body updated
